<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageMakanan"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="24dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_makanan"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_makanan" />

            <TextView
                android:id="@+id/textAsal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asal_makanan" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
