<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageMakananDetail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ayamta" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageMakananDetail"
            android:layout_marginTop="18dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/textNamaDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/nama_makanan_daerah"
                android:textSize="17sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewHarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardViewNama"
            android:layout_marginTop="18dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/textHargaDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/harga"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAsal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardViewHarga"
            android:layout_marginTop="18dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/textAsalDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/asal"
                android:textSize="17sp"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cardViewAsal"
            android:layout_marginTop="18dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:id="@+id/textDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/deskripsi"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</ScrollView>
